# nuss

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
client/: CMakeLists.txt  main.c
client/include/: server.h  window.h
client/src/: scene_manager.c  scene_manager.h  server.c  server.h  window.c  window.h
client/src/scenes/: boot_menu.c  boot_menu.h  main_menu.c  main_menu.h  server_menu.c  server_menu.h  settings_menu.c  settings_menu.h  world_scene.c  world_scene.h
server/: CMakeLists.txt  main.c
server/include/: server.h
server/src/: server.c  server.h
shared/: logger.c  logger.h
tests/: CMakeLists.txt
